--- a/Backend/package.json
+++ b/Backend/package.json
@@ -11,7 +11,7 @@
   "keywords": [
     "Comic"
   ],
-  "author": "AryanBhoi",
+  "author": "Satyam Singh",
   "license": "ISC",
   "dependencies": {
     "axios": "^1.7.7",
